--- a/the_project/templates/index.html
+++ b/the_project/templates/index.html
@@ -26,6 +26,7 @@
 
     <div style="text-align: center" class="rectangle">
         <img id="preview" src="../images/person.jpg"/>
+<!--        <img id="webcam" src="" style="display: none;">-->
         <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
     </div>
     <div>
