--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -8,9 +8,9 @@
 {% block body %}
 <div class="content">
     <h1 style="text-align: center">Адмін панель</h1>
-    <a href="/add_user_step_1" style="text-align: center" class="add_btn">Додати користувача</a>
+<!--    <a href="/add_user_step_1" style="text-align: center" class="add_btn">Додати користувача</a>-->
 <!--    <a href="/multi_form_test/" class="btn">Multi Form Test</a>-->
-    <a href="/multi_form_test/" class="add_btn">Multi Form Test</a>
+    <a href="/add_user/" class="add_btn">Додати користувача</a>
     {% if users|length < 1 %}
     <h4 style="text-align: center">There is no users yet.</h4>
     {% else %}
