--- a/the_project/templates/index.html
+++ b/the_project/templates/index.html
@@ -29,8 +29,6 @@
 <!--        <img id="webcam" src="" style="display: none;">-->
         <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
     </div>
-    <div>
-        <button id="start" class="btn" onclick="showHide('preview', 'video')">Start</button>
-    </div>
+    <a id="start" class="btn btn-center btn-main" onclick="showHide('preview', 'video')">Start</a>
 </header>
 {% endblock %}
