Form data now records to the Database. Next - working face recognition on the main page

--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -36,14 +36,14 @@
     </table>
     {% endif %}
 
-    <div class="form-temp">
-        <form action="/admin/submit_form/" method="POST">
-            <!--  'name' args are needed for backend -->
-            <input type="text" name="name" id="name" placeholder="Name">
-            <input type="text" name="address" id="address" placeholder="Address">
-            <input type="submit" value="Add User">
-        </form>
-    </div>
+<!--    <div class="form-temp">-->
+<!--        <form action="/admin/submit_form/" method="POST">-->
+<!--            &lt;!&ndash;  'name' args are needed for backend &ndash;&gt;-->
+<!--            <input type="text" name="name" id="name" placeholder="Name">-->
+<!--            <input type="text" name="address" id="address" placeholder="Address">-->
+<!--            <input type="submit" value="Add User">-->
+<!--        </form>-->
+<!--    </div>-->
 
 </div>
 {% endblock %}
