--- a/the_project/static/main.css
+++ b/the_project/static/main.css
@@ -79,6 +79,7 @@ p
 /*  margin-left:auto;
   margin-right:auto;*/
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 #preview, #video {
@@ -613,15 +614,14 @@ div.input-group label {
   cursor: pointer;
   transition: 0.3s;
   position: relative;
-  margin-top: 50px;
 }
 .btn:hover {
   box-shadow: 0 0 0 2px #fff, 0 0 0 3px var(--primary-color);
 }
 
 .btn-center {
-    width: 25%;
     margin: 0 auto;
+    width: 250px;
     margin-top: 50px;
 }
 
@@ -660,6 +660,7 @@ div.form-step p {
   display: inline-block;
 }
 
+
 form h1 {
   width: 100%;
   height: 118px;
@@ -674,4 +675,17 @@ form h1 {
   color: #222222;
   margin-left:auto;
   margin-right:auto;
+}
+
+form h2 {
+  color: #222222;
+}
+div.input-group label.red-text {
+    color: red;
+}
+
+#submit-alert, #next-alert{
+    color: red;
+    font-size: 14px;
+    margin-bottom: 0;
 }
