--- a/the_project/templates/add_user.html
+++ b/the_project/templates/add_user.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block body %}
-<!-- 'form' should have class 'form' later !!!!!!!!!!!!!!!!!!!!1 -->
 <form action="/admin/submit_form/" method="POST" class="form">
     <h1 class="text-center">Registration Form</h1>
     <!-- Progress bar -->
@@ -19,25 +18,24 @@
     <!-- Steps -->
     <div class="form-step form-step-active">
         <div class="input-group">
-            <label for="username" >Name</label>
-            <input type="text" name="name" id="name"/>
+            <label for="name" >Name *</label>
+            <input type="text" name="name" id="name" required/>
         </div>
         <div class="input-group">
-            <label for="position" >Address</label>
-            <input type="text" name="address" id="address"/>
+            <label for="address" >Address *</label>
+            <input type="text" name="address" id="address" required/>
         </div>
         <div class="">
             <a class="btn btn-next width-50 ml-auto" onclick="buttonNext()">Next</a>
         </div>
+        <p id="next-alert" style="display: none;">Required fields aren't filled!</p>
     </div>
 
     <div class="form-step">
         <h2>Face rec here</h2>
-<!--        <div style="text-align: center" class="rectangle">-->
         <div class="rectangle">
             <img id="preview" src="../images/person.jpg"/>
             <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
-<!--            <canvas id="video" style="display: none; margin-left: auto; margin-right: auto;"/>-->
         </div>
 
         <div class="btns-group">
@@ -45,22 +43,18 @@
             <a id="photo" class="btn" onclick="takePhoto()" style="display: none;">Take photo</a>
         </div>
 
-        <p id="photo-text" style="display: none;"><span id="saved-photos">0</span>/5 photos taken</p>
+        <p id="photo-text" ><span id="saved-photos">0</span>/5 photos taken</p>
 
         <div class="btns-group">
             <a class="btn btn-prev" onclick="buttonPrevios()">Previous</a>
-<!--            <input type="submit" value="Submit" class="btn"/>-->
             <a class="btn" onclick="submitForm()">Submit</a>
         </div>
+        <p id="submit-alert" style="display: none;">The photos aren't taken</p>
     </div>
 
     <div class="form-step">
         <h2>User was successfully added!</h2>
-        <div class="btns-group">
-            <a class="btn btn-prev" onclick="buttonPrevios()">Previous</a>
-            <a class="btn" onclick="submitForm()">Submit</a>
-            <!--<input type="submit" value="Submit" class="btn"/>-->
-        </div>
+        <a class="btn btn-center" href="/admin">Admin page</a>
     </div>
 </form>
 {% endblock %}
