--- a/the_project/templates/index.html
+++ b/the_project/templates/index.html
@@ -22,6 +22,7 @@
 
     <div>
         <h2>Приклад ідентифікації</h2>
+        <p class="small-description">(Ви можете додати своє обличчя в алгоритм розпiзнавання на сторiнцi <a href="/admin">"Адмiн панель"</a>)</p>
     </div>
 
     <div style="text-align: center" class="rectangle">
