face recognition now works on the main page

--- a/the_project/templates/add_user.html
+++ b/the_project/templates/add_user.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="btns-group">
-            <a id="start" class="btn" onclick="showHide('preview', 'video')">Start</a>
+            <a id="start" class="btn" onclick="showHide('preview', 'video', 1)">Start</a>
             <a id="photo" class="btn" onclick="takePhoto()" style="display: none;">Take photo</a>
         </div>
 
