--- a/the_project/templates/index.html
+++ b/the_project/templates/index.html
@@ -30,6 +30,6 @@
 <!--        <img id="webcam" src="" style="display: none;">-->
         <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
     </div>
-    <a id="start" class="btn btn-center btn-main" onclick="showHide('preview', 'video')">Start</a>
+    <a id="start" class="btn btn-center btn-main" onclick="showHide('preview', 'video', 2)">Start</a>
 </header>
 {% endblock %}
