--- a/the_project/templates/index.html
+++ b/the_project/templates/index.html
@@ -26,10 +26,10 @@
     </div>
 
     <div style="text-align: center" class="rectangle">
-        <img id="preview" src="../images/person.jpg"/>
+        <img id="preview" src="../images/identification.png" style = "border: 1px solid white;"/>
 <!--        <img id="webcam" src="" style="display: none;">-->
         <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
     </div>
-    <a id="start" class="btn btn-center btn-main" onclick="showHide('preview', 'video', 2)">Start</a>
+    <a id="start" class="btn btn-center btn-main" onclick="showHide('preview', 'video', 2)">Почати</a>
 </header>
 {% endblock %}
