--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -12,15 +12,15 @@
 <!--    <a href="/multi_form_test/" class="btn">Multi Form Test</a>-->
     <a href="/add_user/" class="add_btn">Додати користувача</a>
     {% if users|length < 1 %}
-    <h4 style="text-align: center">There are no users yet</h4>
+    <h4 style="text-align: center">Користувачів ще немає</h4>
     <img id="preview" src="../images/void.png" style="width:40%; margin:0 auto;"/>
     {% else %}
     <table>
         <tr>
-            <th>Name</th>
-            <th>Address</th>
-            <th>Created at</th>
-            <th>Actions</th>
+            <th>Ім'я</th>
+            <th>Адреса</th>
+            <th>Дата створення</th>
+            <th>Дії</th>
         </tr>
         {% for user in users %}
         <tr>
