--- a/the_project/templates/add_user.html
+++ b/the_project/templates/add_user.html
@@ -33,6 +33,16 @@
 
     <div class="form-step">
         <h2>Розпізнавання обличчя</h2>
+        <p>Для внесення нового користувача до бази даних, необхідно отримати дані про риси обличчя користувача.</p>
+        <p>Слідуйте наступній інструкції:</p>
+        <ul>
+            <li>Увімкніть камеру, натиснувши на кнопку “Почати”.</li>
+            <li>Зробіть 5 фотографій, натискаючи на кнопку "Зробити фото"</li>
+<!--            <li>Уважно читайте кроки, які вам необхідно виконати після натиснення на кнопку.</li>-->
+<!--            <li>Після кожного виконаного кроку, необхідно натиснути кнопку “Зробити фото”.</li>-->
+            <li>Коли ви зробите 5 фотографій, необхідно зупинити трансляцию камери, натиснувши кнопку “Зупинити”.</li>
+            <li>Натисніть кнопку “Підтвердити та відправити”.</li>
+        </ul>
         <div class="rectangle rectangle-100">
             <img id="preview" src="../images/identification.png"/>
             <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
