--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div class="content">
     <h1 style="text-align: center">Адмін панель</h1>
-    <a href="/add_user/" class="add_btn">Додати користувача</a>
+    <a href="/add_user/" class="add_btn">Додати запис</a>
     {% if users|length < 1 %}
     <h4 style="text-align: center">Користувачів ще немає</h4>
     <img id="preview" src="../images/void.png" style="width:40%; margin:0 auto;"/>
