Added edit_user page. It works, but isn't tested well yet.

--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -28,7 +28,7 @@
             <td class="action_date">
                 <a href="/admin/users/delete/{{ user.id }}" class="button primary delete"><i
                         class="fa-solid fa-trash-can"></i></a>
-                <a class="button primary edit"><i class="fa-solid fa-pen-to-square"></i></a>
+                <a href="/edit_user/{{ user.id }}" class="button primary edit"><i class="fa-solid fa-pen-to-square"></i></a>
             </td>
         </tr>
         {% endfor %}
